instances.tf
resource "aws_instance" "instance-a-frontend" {
  ami                         = var.ami
  instance_type               = "t2.micro"
  key_name                    = var.key_pair_name
  subnet_id                   = aws_subnet.public_subnet.id
  associate_public_ip_address = true
  vpc_security_group_ids      = [aws_security_group.frontend_sg.id]

  tags = { Name = "instance-a-frontend" }
}
